feat: module login home and register

--- a/Climatic/Resources/layout/home_fragment.xml
+++ b/Climatic/Resources/layout/home_fragment.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/_55sdp"
-            android:text="23°C"
+            android:text="22°C"
             android:textColor="@android:color/white"
             app:layout_constraintTop_toBottomOf="@id/weatherIcon"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
                 android:id="@+id/box1Number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="10"
+                android:text="11 km/h"
                 android:gravity="center"
                 android:textSize="24sp"
                 android:textColor="@android:color/white"
@@ -72,7 +72,7 @@
                 android:id="@+id/box1Subtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Parametro 1"
+                android:text="Viento"
                 android:gravity="center"
                 android:textSize="14sp"
                 android:textColor="@android:color/white"
@@ -98,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="20"
+                android:text="72%"
                 android:textSize="24sp"
                 android:textColor="@android:color/white"
                 android:layout_margin="8dp"/>
@@ -107,7 +107,7 @@
                 android:id="@+id/box2Subtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Parametro 2"
+                android:text="Humedad"
                 android:textSize="14sp"
                 android:gravity="center"
                 android:textColor="@android:color/white"
@@ -132,7 +132,7 @@
                 android:id="@+id/box3Number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="30"
+                android:text="7%"
                 android:textSize="24sp"
                 android:gravity="center"
                 android:textColor="@android:color/white"
@@ -143,7 +143,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Parametro 3"
+                android:text="Prob. de precipitacione"
                 android:textSize="14sp"
                 android:textColor="@android:color/white"
                 android:layout_margin="8dp"/>
